Added testimonials but need more. Also added PHPMailer class but am ignoring it

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         			<li id="education"><span class="cool-link">Education</span></li>
         			<li id="portfolio"><span class="cool-link">Portfolio</span></li>
                     <li id="interests"><span class="cool-link">Interests</span></li>
+                    <li id="feedback"><span class="cool-link">Feedback</span></li>
                     <li id="contact"><span class="cool-link">Contact Me</span></li>
         		</ul>
         	</div>
@@ -89,6 +90,7 @@
 		        					<a href="https://www.facebook.com/gerry.bunker" target="_blank" class="my_facebook" title="Facebook"></a>
 		        					<a href="https://www.linkedin.com/in/gerrybunker/" target="_blank" class="my_linkedin" title="LinkedIn"></a>
 		        					<a href="https://github.com/tibicentibicen" target="_blank" class="my_github" title="GitHub"></a>
+                                    <a href="https://www.instagram.com/cicadaguy/?hl=en" target="_blank" class="my_instagram" title="Instagram"></a>
 		        				</span>
 		        			</p>
 	        			</div>
@@ -145,12 +147,12 @@
         				<div class="cols_50">
         					<hr>
         					<h4>Front End Development</h4>
-        					<p>HTML5, CSS3, LESS, SASS, Bootstrap, Git/SVN, Wordpress, Foundation, Compass</p>
+        					<p>HTML5, CSS3, LESS, SASS, Bootstrap, Git/SVN, Bitbucket, Wordpress, Foundation, Compass, Search Engine Optimization, Responsive and Adaptive developement. Responsive Emails, Video Production</p>
         				</div>
         				<div class="cols_50">
         					<hr>
-        					<h4>SEO Audit</h4>
-        					<p>Screaming Frog, Woorank, Raventools, Semrush, Moz, WebCEO, Google Analytics, ChartBeat, CrazyEgg.</p>
+        					<h4>Project Management</h4>
+        					<p>Confluence, Jira, Workfront, Salesforce, Microsoft Office Suite, </p>
         				</div>	
         			</div>
                     <img class="zig_zag" src="images/zig-zag.png">
@@ -362,21 +364,21 @@
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Education</h2>
-	        				<p>I'm a life-long learner with a natural curiosity in a broad range of subjects, from Entomology, Video Production, Photography and Computer Science.</p>
+	        				<p>I'm a life-long learner with a natural curiosity in a broad range of subjects, like Entomology, Video Production, Photography and Computer Science.</p>
 	        			</div>
 	        		</div>
         			<div class="cols_66">
 	        			<div class="experience_row">
 	        				<h4 class="title">Google Developer Training</h4>
 	        				<p class="company_name">Google</p>
-	        				<p>July, 2016 - March, 2018</p>
+	        				<p class="clear">July, 2016 - March, 2018</p>
 	        				<p class="description">Learn to use App Engine, Google's Platform as a Service, to build the backend for web apps that scale not only as your user base grows but as request volumes peaks with sudden demand.</p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
 	        				<h4 class="title">Software Development</h4>
 	        				<p class="company_name">Boston University</p>
-	        				<p>Jan, 2006 - May, 2009</p>
+	        				<p class="clear">Jan, 2006 - May, 2009</p>
 	        				<p class="description">BSc (Hons) in Software Development. Outstanding Academic Achievement Award.</p>
 	        				<hr>
 	        			</div>
@@ -648,30 +650,111 @@
                     <div class="cols_33">
                         <div class="section_sidebar">
                             <h2>Interests</h2>
-                            <p>Some text about my Entomology Stuff</p>
+                            <p>One of my passions is Entomology. As an independent researcher, I study two particular species of insects, the Cicada (Family: Cicadidae) and the Cicada Killer wasp (Family: Crabronidae).</p>
                         </div>
                     </div>
                     <div class="cols_66">
                         <div class="experience_row">
-                            <h4 class="title">List of Publication</h4>
-                            <p class="company_name">Google</p>
-                            <p>July, 2016 - March, 2018</p>
-                            <p class="description">Learn to use App Engine, Google's Platform as a Service, to build the backend for web apps that scale not only as your user base grows but as request volumes peaks with sudden demand.</p>
+                            <h2>Website</h2>
+                            <h4 class="title">Massachusetts Cicadas</h4>
+                            <p class="company_name">Launch date: 2004</p>
+                            <p class="description">Dedicated to the study of the cicadas of Massachusetts and New England.</p>
+                            <p><a href="http://www.masscic.org" title="Massachusetts Cicadas">Visit Site</a></p>
+                            <hr>
+                        </div>      
+                        <div class="experience_row">
+                            <h2>Books</h2>
+                            <h4 class="title">Island Life:</h4>
+                            <p class="company_name">A Catalog of the Biodiversity On and Around Martha's Vineyard. 2008</p>
+                            <p class="description">Allan R. Keith, Stephen A. Spongberg 3:41-43</p>
+                            <hr>
+                        </div>        
+                        <div class="experience_row">
+                            <h2>Papers</h2>
+                            <h4 class="title">New Northern records of Tibicen chloromera (Hemiptera: Cicadidae) in Connecticut.</h4>
+                            <p class="company_name clear">Transactions of the American Entomological Society 133:167-180. 2007.</p>
+                            <p class="description">Bunker, G. J., M. L. Neckermann, and J. R. Cooley.</p>
                             <hr>
                         </div>
                         <div class="experience_row">
-                            <h4 class="title">Website information</h4>
-                            <p class="company_name">Boston University</p>
-                            <p>Jan, 2006 - May, 2009</p>
-                            <p class="description">BSc (Hons) in Software Development. Outstanding Academic Achievement Award.</p>
+                            <h4 class="title">The distribution of periodical cicada (Magicicada) Brood I in 2012, with previously unreported disjunct populations (Hemiptera: Cicadidae).</h4>
+                            <p class="company_name">The American Entomologist 61:52-57. 2015.</p>
+                            <p class="description">Cooley, J. R.</p>
                             <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">The periodical cicada four-year acceleration hypothesis revisited: Evidence for life cycle decelerations and an updated map for Brood V (Hemiptera: Magicicada spp.).</h4>
+                            <p class="company_name clear">Submitted. 2018.</p>
+                            <p class="description">Cooley, J. R., N. Arguedas, E. Bonaros, G. J. Bunker, S. M. Chiswell, A. DeGiovine, M. D. Edwards, D. Hassanieh, D. Haji, J. Knox, G. Kritsky, C. Mills, D. Mozgai, R. Troutman, J. D. Zyla, H. Hasegawa, T. Sota, J. Yoshimura, and C. Simon. </p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">Periodical cicadas (Magicicada spp.): The distribution of Broods XIV in 2008 and “XV” in 2009.</h4>
+                            <p class="company_name clear">The American Entomologist 57:144-151. 2011.</p>
+                            <p class="description">Cooley, J. R., G. Kritsky, M. D. Edwards, J. D. Zyla, D. C. Marshall, K. B. R. Hill, G. J. Bunker, M. L. Neckermann, and C. Simon.</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">A GIS-based map of periodical cicada Brood XIII in 2007, with notes on adjacent populations of Broods III and X (Hemiptera: Magicicada spp.).</h4>
+                            <p class="company_name clear">The American Entomologist 62:241-246. 2016.</p>
+                            <p class="description">Cooley, J. R., G. Kritsky, D. C. Marshall, K. B. R. Hill, G. J. Bunker, M. L. Neckermann, J. Yoshimura, J. E. Cooley, and C. Simon.</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">At the limits: Habitat suitability modeling of Northern 17-year periodical cicada extinctions (Hemiptera: Magicicada spp.).</h4>
+                            <p class="company_name clear">Global Ecology and Biogeography 22:410-421. 2013.</p>
+                            <p class="description">Cooley, J. R., M. L. Neckermann, G. J. Bunker, D. C. Marshall, and C. Simon.</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">The distribution of periodical cicada (Magicicada) Brood II in 2013: Disjunct emergences suggest complex origins.</h4>
+                            <p class="company_name clear">The American Entomologist 61:245-251. 2015.</p>
+                            <p class="description">Cooley, J. R., C. Simon, C. Maier, D. C. Marshall, J. Yoshimura, S. M. Chiswell, M. D. Edwards, C. W. Holliday, R. Grantham, J. D. Zyla, R. L. Sanders, M. L. Neckermann, and G. J. Bunker.</p>
                         </div>
                     </div>                  
                 </div>
             </div><!-- end content wrapper -->
         </section>
 
+        <section id="my_feedback" class="section">
+            <div class="content_wrapper">
+                <div class="row">
+                    <img class="zig_zag" src="images/zig-zag.png">
+                    <div class="cols_33">
+                        <div class="section_sidebar">
+                            <h2>Feedback</h2>
+                            <p>Take a look at what my colleagues and clients are saying about me. </p>
+                        </div>
+                    </div>
+                    <div class="cols_66">
+                        <div class="experience_row extra_padding">
+                            <img src="images/autumn_wilbur.jpg" alt="Autumn Wilbur">
+                            <h4 class="title">Autumn Wilbur</h4>
+                            <p class="company_name">UX Designer @ Thermo Fisher Scientific</p>
+                            <p class="description">I had the privilege of working closely with Gerry Bunker for many years.</p>
 
+                            <p class="description">One of the things I appreciated most about working with Gerry is his collaborative and insightful nature. He wants to ensure the job is done in the best and most well thought out way possible; from every angle, not just through his development lens. He offered great insight and advice for the design aspects of many projects we worked on together and I always valued his opinion. Sometimes it was a usability suggestion, sometimes it was a vision of longer term maintenance that he had in mind - no matter what it was it was always useful and thoughtful advice.</p>
+
+                            <p class="description">Gerry is extremely knowledgeable in many areas of development and continues to grow his repertoire and understanding. He is in tune with the evolution of development and brings that understanding to every project he does. He is also a willing and patient teacher. I learned a great deal about development during the time we worked together.</p>
+
+                            <p class="description">We had one project in particular that could be labeled as tedious. It was something we both inherited and had to maintain weekly for years. This was not something that was developed or designed in a way that would be considered maintenance friendly but Gerry took pride in ensuring that the output, no matter how challenging or time consuming the work, was always professional and perfect. He really takes pride in his work.</p>
+
+                            <p class="description">Gerry also has expertise in science and other broad interests which make conversations with him even more interesting.</p>
+
+                            <p class="description">It was an absolute pleasure working with Gerry and I would highly recommend him as a great addition to any team.</p>
+                            <hr>
+                        </div>      
+                        <div class="experience_row extra_padding">
+                            <img src="images/karen_lecuyer.jpg" alt="Autumn Wilbur">
+                            <h4 class="title">Karen LEcuyer</h4>
+                            <p class="company_name">Project Manager, Membership Programs. @ Staples</p>
+                            <p class="description">In my Account Services role, I worked with Gerry on mostly responsive email and landing page development. With consistent high volume and always critical deadlines, Gerry brought a sense of calm to each project – you just knew it would be done with precision and on time. His response times were immediate, eliminating the need to track him down, which is like gold for any account manager. While always meeting deadlines he was also patient in order to explain and resolve technical issues so that non-experts could understand. Gerry would be a welcome addition to any team.</p>
+                            <hr>
+                        </div>        
+                    </div>                  
+                </div>
+            </div><!-- end content wrapper -->
+        </section>
 
          <section id="my_contact" class="section">
             <div class="content_wrapper">
