added new feedback section. Updated scripts for contact forms

--- a/index.html
+++ b/index.html
@@ -745,12 +745,27 @@
                             <hr>
                         </div>      
                         <div class="experience_row extra_padding">
-                            <img src="images/karen_lecuyer.jpg" alt="Autumn Wilbur">
+                            <img src="images/karen_lecuyer.jpg" alt="Karen LEcuyer">
                             <h4 class="title">Karen LEcuyer</h4>
                             <p class="company_name">Project Manager, Membership Programs. @ Staples</p>
                             <p class="description">In my Account Services role, I worked with Gerry on mostly responsive email and landing page development. With consistent high volume and always critical deadlines, Gerry brought a sense of calm to each project – you just knew it would be done with precision and on time. His response times were immediate, eliminating the need to track him down, which is like gold for any account manager. While always meeting deadlines he was also patient in order to explain and resolve technical issues so that non-experts could understand. Gerry would be a welcome addition to any team.</p>
                             <hr>
                         </div>        
+                        <div class="experience_row extra_padding">
+                            <img src="images/andrea_placeholder.jpg" alt="Andrea">
+                            <h4 class="title">Andrea Loguidice</h4>
+                            <p class="company_name">Associate Creative Director. @ Staples</p>
+                            <p class="description">As one of the in-house developers, Gerry’s dedication and knowledge set him aside as someone I could rely on to develop my layouts on time and accurately. He always puts in the extra time to get it done right as he recognizes and solves issues before they became problems. Gerry is eager to answer questions and teach designers best practices allowing for work to be executed efficiently, aesthetically and collaboratively.</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row extra_padding">
+                            <img src="images/john_kotsinonos.jpg" alt="John Kotsinonos">
+                            <h4 class="title">John Kotsinonos</h4>
+                            <p class="company_name">Senior Manager - Membership Strategy and Innovation @ Staples</p>
+                            <p class="description">Gerry and I worked together on many projects over the years across the Staples.com site. His attention to detail, responsiveness, and willingness to go the extra mile to get things right were extremely valuable to me and our company. Our work ran the gamut from last minute fixes, to planning long term solutions for regular updates to speed up processes and minimize errors, and Gerry was the consummate partner in all of these situations.</p>
+                            <hr>
+                        </div>        
+    
                     </div>                  
                 </div>
             </div><!-- end content wrapper -->
@@ -767,20 +782,20 @@
                     </div>
                     <div class="cols_66">
                         <div class="row" style="position: relative;">
-                            <form action="" method="" id="bottom_form" class="">
+                            <form action="processcontacts.php" method="post" id="bottom_form" class="">
                                 <div class="cols_50">
                                     <div class="element_wrapper">
-                                        <input id="name" type="text" placeholder="Name">
+                                        <input name="name" id="name" type="text" placeholder="Name">
                                         <span class="my_error animated fadeInUp">Please provide your name</span>
                                     </div>
                                     <div class="element_wrapper">
-                                        <input id="email" type="text" placeholder="E-mail">
+                                        <input name="email" id="email" type="text" placeholder="E-mail">
                                         <span class="my_error animated fadeInUp">Please provide a valid email address</span>
                                     </div>
                                 </div>
                                 <div class="cols_50">
                                     <div class="element_wrapper">
-                                        <textarea id="message" placeholder="Message"></textarea>
+                                        <textarea name="message" id="message" placeholder="Message"></textarea>
                                         <span class="my_error animated fadeInUp">Please say something of substance</span>
                                     </div>
                                 </div>
@@ -814,20 +829,20 @@
                             <h1>Let&rsquo;s collaborate!</h1>
                             <p>Are you working on something? Let&rsquo;s make it happen! Drop me a letter and start your project right now! Just do it.</p>
                         </div>
-                        <form action="" method="" id="" class="">
+                        <form action="processcontacts.php" method="post" id="" class="">
                             <div class="cols_50">
                                 <div class="element_wrapper">
-                                    <input id="name" type="text" placeholder="Name">
+                                    <input name="name" id="name" type="text" placeholder="Name">
                                     <span class="my_error animated fadeInUp">Please provide your name</span>
                                 </div>
                                 <div class="element_wrapper">
-                                    <input id="email" type="text" placeholder="E-mail">
+                                    <input name="email" id="email" type="text" placeholder="E-mail">
                                     <span class="my_error animated fadeInUp">Please provide a valid email address</span>
                                 </div>
                             </div>
                             <div class="cols_50">
                                 <div class="element_wrapper">
-                                    <textarea id="message" placeholder="Message"></textarea>
+                                    <textarea name="message" id="message" placeholder="Message"></textarea>
                                     <span class="my_error animated fadeInUp">Please say something of substance</span>
                                 </div>
                             </div>
