post launch modifications

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 		        			</p>
 		        			<p>
 		        				<span class="span_title">Email</span>
-		        				<span>me&#64;someemail.com</span>
+		        				<span>mechaworx&#64;yahoo.com</span>
 		        			</p>
-		        			<p>
+		        			<!-- <p>
 		        				<span class="span_title">Address</span>
 		        				<span>Not available</span>
-		        			</p>
+		        			</p> -->
 		        			<p>
 		        				<span class="span_title">Social</span>
 		        				<span class="span_icons">
@@ -142,7 +142,7 @@
         				</div>
         				<div class="cols_50">
         					<h4>UI/UX Development Tools and Design</h4>
-        					<p>Photoshop, Illustrator, Sketch, Prototyping, Wireframing, User Research, Usability Testing, Dreamweaver, Coda, Sublime, Brackets, Zencoder, Litmus, Email On Acid.</p>
+        					<p>Photoshop, Illustrator, Acrobat Professional, Sketch, Prototyping, Wireframing, User Research, Usability Testing, Dreamweaver, Text Wrangler, Coda, Sublime, Brackets, Zencoder, Litmus, Email On Acid.</p>
         				</div>
         				<div class="cols_50">
         					<hr>
@@ -151,8 +151,8 @@
         				</div>
         				<div class="cols_50">
         					<hr>
-        					<h4>Project Management</h4>
-        					<p>Confluence, Jira, Workfront, Salesforce, Microsoft Office Suite, </p>
+        					<h4>Project Management Skills and Software</h4>
+        					<p>Confluence, Jira, Workfront, Salesforce, Microsoft Office Suite, Quickbooks, Strategic Planning, Communication Skills, Project Scheduling, Vendor Management, Product Sourcing</p>
         				</div>	
         			</div>
                     <img class="zig_zag" src="images/zig-zag.png">
@@ -364,24 +364,44 @@
 	        		<div class="cols_33">
 	        			<div class="section_sidebar">
 	        				<h2>Education</h2>
-	        				<p>I'm a life-long learner with a natural curiosity in a broad range of subjects, like Entomology, Video Production, Photography and Computer Science.</p>
+	        				<p>I'm a life-long, self-taught, learner with a natural curiosity in a broad range of subjects, like Entomology, Video Production, Photography and Computer Science.</p>
 	        			</div>
 	        		</div>
         			<div class="cols_66">
 	        			<div class="experience_row">
-	        				<h4 class="title">Google Developer Training</h4>
-	        				<p class="company_name">Google</p>
-	        				<p class="clear">July, 2016 - March, 2018</p>
-	        				<p class="description">Learn to use App Engine, Google's Platform as a Service, to build the backend for web apps that scale not only as your user base grows but as request volumes peaks with sudden demand.</p>
+	        				<h4 class="title">HTML 5 Training</h4>
+	        				<p class="company_name">American Graphics Institute - Burlington, Ma.</p>
+	        				<p class="clear">June, 2015</p>
+	        				<p class="description">The course covered standards for working with video, forms, and interactivity. Learned about nnew HTML 5 tags. Learned HTML5 methods for adaptive and responsive design, mobile design, and other uses for CSS3.</p>
 	        				<hr>
 	        			</div>
 	        			<div class="experience_row">
-	        				<h4 class="title">Software Development</h4>
-	        				<p class="company_name">Boston University</p>
-	        				<p class="clear">Jan, 2006 - May, 2009</p>
-	        				<p class="description">BSc (Hons) in Software Development. Outstanding Academic Achievement Award.</p>
+	        				<h4 class="title">Digital Web Design Training</h4>
+	        				<p class="company_name">LVS Online</p>
+	        				<p class="clear">2005</p>
+	        				<p class="description">Understanding of best practices in web design.</p>
 	        				<hr>
 	        			</div>
+                        <div class="experience_row">
+                            <h4 class="title">Microsoft Office 2000</h4>
+                            <p class="company_name">Training Unlimited - Lowell, Ma.</p>
+                            <p class="clear">2000</p>
+                            <p class="description">Understanding of best practices in web design.</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">Varian Vacuum Practices</h4>
+                            <p class="company_name">Varian Associates - Lexinton, Ma.</p>
+                            <p class="clear">1991</p>
+                            <p class="description">Understanding the principles of high vacuum. Understanding and operation of roughing pumps, turbo pumps, guages, systems, leak detection and various hardware.</p>
+                            <hr>
+                        </div>
+                        <div class="experience_row">
+                            <h4 class="title">Apprenticeship</h4>
+                            <p class="company_name">Oxford, England</p>
+                            <p class="clear">1991</p>
+                            <p class="description">3 month apprenticeship on the construction and installation of superconducting magnet systems for NMR and MRI Spectroscopy</p>
+                        </div>
         			</div>        			
         		</div>
         	</div><!-- end content wrapper -->
@@ -743,7 +763,14 @@
 
                             <p class="description">It was an absolute pleasure working with Gerry and I would highly recommend him as a great addition to any team.</p>
                             <hr>
-                        </div>      
+                        </div>
+                        <div class="experience_row extra_padding">
+                            <img src="images/mindy_emond.jpg" alt="Mindy Emond">
+                            <h4 class="title">Mindy Emond</h4>
+                            <p class="company_name">eCommerce Project Manager @ Staples</p>
+                            <p class="description">I had the pleasure of working with Gerry for 5 years within the Staples.com space. He was always professional in his approach on every project and went above and beyond to help create new ways to engage the customer for the best experience.  Gerry was great at trouble shooting any issues that occurred with creative assets on the website and was always my go to person to brainstorm innovative ideas for the site. He always delivered the assets on or ahead of schedule even if he had to make last minute changes due to shifting priorities. He was a great business partner who delivered quality work. Gerry would be a true asset to any company.</p>
+                            <hr>
+                        </div>     
                         <div class="experience_row extra_padding">
                             <img src="images/karen_lecuyer.jpg" alt="Karen LEcuyer">
                             <h4 class="title">Karen LEcuyer</h4>
@@ -754,7 +781,7 @@
                         <div class="experience_row extra_padding">
                             <img src="images/andrea_placeholder.jpg" alt="Andrea">
                             <h4 class="title">Andrea Loguidice</h4>
-                            <p class="company_name">Associate Creative Director. @ Staples</p>
+                            <p class="company_name">Associate Creative Director. @ Craft WW Boston</p>
                             <p class="description">As one of the in-house developers, Gerry’s dedication and knowledge set him aside as someone I could rely on to develop my layouts on time and accurately. He always puts in the extra time to get it done right as he recognizes and solves issues before they became problems. Gerry is eager to answer questions and teach designers best practices allowing for work to be executed efficiently, aesthetically and collaboratively.</p>
                             <hr>
                         </div>
@@ -763,7 +790,6 @@
                             <h4 class="title">John Kotsinonos</h4>
                             <p class="company_name">Senior Manager - Membership Strategy and Innovation @ Staples</p>
                             <p class="description">Gerry and I worked together on many projects over the years across the Staples.com site. His attention to detail, responsiveness, and willingness to go the extra mile to get things right were extremely valuable to me and our company. Our work ran the gamut from last minute fixes, to planning long term solutions for regular updates to speed up processes and minimize errors, and Gerry was the consummate partner in all of these situations.</p>
-                            <hr>
                         </div>        
     
                     </div>                  
