added more content to portfolio

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         				<div class="cols_50">
         					<hr>
         					<h4>Project Management Skills and Software</h4>
-        					<p>Confluence, Jira, Workfront, Salesforce, Microsoft Office Suite, Quickbooks, Strategic Planning, Communication Skills, Project Scheduling, Vendor Management, Product Sourcing</p>
+        					<p>Confluence, Jira, Workfront, Smartsheet, ManagePlus, OrganizePlus, Salesforce, Microsoft Office Suite, Quickbooks, Strategic Planning, Communication Skills, Project Scheduling, Vendor Management, Product Sourcing</p>
         				</div>	
         			</div>
         		</div>
@@ -362,6 +362,7 @@
         					<li data-filter="all" class="active all"><span class="cool-link">All Projects</span></li>
         					<li data-filter="landing_page"><span class="cool-link">Landing Pages</span></li>
         					<li data-filter="microsite"><span class="cool-link">Microsites</span></li>
+                            <li data-filter="prototype"><span class="cool-link">Prototypes</span></li>
         					<li data-filter="email"><span class="cool-link">Emails</span></li>
         				</ul>
         			</div>
@@ -381,6 +382,19 @@
                                     <p><b>Type</b>: <i>Responsive</i></p>
                                 </div>                    
                                 <a href="" data-toggle="modal" data-name="service-plans-microsite" data-target="#portfolio_modal" title=""></a>
+                            </div>
+                            <div class="cols_25 all" data-category="prototype">                           
+                                <div class="portfolio_parent">
+                                    <div class="portfolio_img"><img src="images/prototype-thumb.jpg"></div>
+                                 </div>
+                                <div class="portfolio_name">
+                                    <h4>Adaptive Banners Prototyping</h4>                  
+                                </div>
+                                <div class="portfolio_type">
+                                    <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
+                                    <p><b>Type</b>: <i>Adaptive</i></p>
+                                </div>                    
+                                <a href="" data-toggle="modal" data-name="adaptive-banners-prototyping" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
@@ -698,7 +712,7 @@
                             <h4 class="title">Microsoft Office 2000</h4>
                             <p class="company_name">Training Unlimited - Lowell, Ma.</p>
                             <p class="clear">2000</p>
-                            <p class="description">Understanding of best practices in web design.</p>
+                            <p class="description">Course included MS Word, MS Powerpoint, MS Excel and MS Access.</p>
                             <hr>
                         </div>
                         <div class="experience_row">
@@ -741,6 +755,7 @@
                             <h2>Books</h2>
                             <h4 class="title">Island Life:</h4>
                             <p class="company_name">A Catalog of the Biodiversity On and Around Martha's Vineyard. 2008</p>
+                            <p class="company_name clear">I wrote the chapter on Cicadas for this book.</p>
                             <p class="description">Allan R. Keith, Stephen A. Spongberg 3:41-43</p>
                             <hr>
                         </div>        
@@ -904,6 +919,19 @@
                             <a href="" class="cta grey close_me" title="Close This">Close This</a>
                         </div>
                     </div>
+                    <div class="modal_body" data-name="adaptive-banners-prototyping">
+                        <div class="cols_100">
+                            <h2>Protyping for Adaptive Banners</h2>
+                            <p>At Staples, weekly promotions were offered for Staples' members rewards programs. Since this was a tiered program, multiple promotions were run targeting each tier and appeared on the home page. To this end, a rapid prototyping methodology was implemented for internal creative reviews. Banners were adaptive to 4 breakpoints.</p>
+                            <p><b>STACK:</b> HTML5, SASS, CSS3, Javascript, JQuery, JQuery Bxslider</p>
+                            <img src="projects/home-banners/images/prototype-modal.jpg">
+                        </div>
+                        <div class="cols_100">
+                            <a href="projects/home-banners/index-5-14.html" class="cta blue" title="Visit Page" target="_blank">Example 1</a>
+                            <a href="projects/home-banners/index-8-20.html" class="cta blue" title="Visit Page" target="_blank">Example 2</a>
+                            <a href="" class="cta grey close_me" title="Close This">Close This</a>
+                        </div>
+                    </div>
                     <div class="modal_body" data-name="coupon-corner">
                         <div class="cols_100">
                             <h2>Coupon Corner</h2>
@@ -1029,7 +1057,7 @@
                     <div class="modal_body" data-name="next-gen-easy-button">
                         <div class="cols_100">
                             <h2>Next Gen Easy Button</h2>
-                            <p>The Next Generation Easy Button project was a beta program that a focused group of Staples' best clients were invited to try. It was an AI program based off of IBM's Watson AI and similar to Amazon's Alexa. This microsite was developed to familiarize thosee participating in the program.</p>
+                            <p>The Next Generation Easy Button project was a beta program that a focused group of Staples' best clients were invited to try. It was an AI program based off of IBM's Watson AI and similar to Amazon's Alexa. This microsite was developed to familiarize thosee participating in the program with how the button worked.</p>
                             <p><b>STACK:</b> HTML5, SASS, CSS3, Transitions, Javascript, JQuery, Bootstrap, Vidyard API</p>
                             <img src="projects/easy-button-v2/images/easy-button-modal.jpg">
                         </div>
@@ -1102,7 +1130,7 @@
                     </div>
                     <div class="modal_body" data-name="staples-plus">
                         <div class="cols_100">
-                            <h2>Print Markketing Services Email</h2>
+                            <h2>Print Marketing Services Email</h2>
                             <p>This page was developed for mobile phones only. It does work on desktop but is used and marketed for mobile phones.</p>
                             <p><b>STACK:</b>HTML5, SASS, CSS3 transitions, Javascript, JQuery, JQuery Bxslider</p>
                             <img src="projects/staples-plus/images/staples-plus-modal.jpg">
