updated index page and added error reporting to phpprocesscontacts page

--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                                     <p><b>Business Unit</b>: <i>Staples<sup class="super">&reg;</sup></i></p>
                                     <p><b>Type</b>: <i>Adaptive</i></p>
                                 </div>                    
-                                <a href="" data-toggle="modal" data-name="Business Supplies" data-target="#portfolio_modal" title=""></a>
+                                <a href="" data-toggle="modal" data-name="business-supplies" data-target="#portfolio_modal" title=""></a>
                             </div>
                             <div class="cols_25 all" data-category="landing_page">                           
                                 <div class="portfolio_parent">
