updated jquery form validation

--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                     </div>
                     <div class="cols_66">
                         <div class="row" style="position: relative;">
-                            <form action="processcontacts.php" method="post" id="bottom_form" class="">
+                            <form action="" method="post" id="bottom_form" class="">
                                 <div class="cols_50">
                                     <div class="element_wrapper">
                                         <input name="name" id="name" type="text" placeholder="Name">
@@ -868,7 +868,7 @@
                             <h1>Let&rsquo;s collaborate!</h1>
                             <p>Are you working on something? Let&rsquo;s make it happen! Drop me a letter and start your project right now! Just do it.</p>
                         </div>
-                        <form action="processcontacts.php" method="post" id="" class="">
+                        <form action="" method="post" id="" class="">
                             <div class="cols_50">
                                 <div class="element_wrapper">
                                     <input name="name" id="name" type="text" placeholder="Name">
